add user view and authors, orders

--- a/BookManager/BookCategories.xaml
+++ b/BookManager/BookCategories.xaml
@@ -11,6 +11,10 @@
         <TextBox x:Name="Name" VerticalAlignment="Center" HorizontalAlignment="Center" Width="150" Height="25" Margin="0,0,550,150"/>
         <Button x:Name="Add" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,550,20" Width="120" Height="25" Click="Add_Click">Добавить</Button>
         <Button x:Name="Delete" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,250,20" Width="120" Height="25" Click="Delete_Click">Удалить</Button>
-        <DataGrid x:Name="Table" AutoGenerateColumns="True" Width="300" Margin="250, 50, 0, 50"/>
+        <DataGrid x:Name="Table" AutoGenerateColumns="False" Width="300" Margin="250, 50, 0, 50">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Название" Binding="{Binding Path=Name}" Width="290"/>
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </Window>
