--- a/BookManager/Books.xaml
+++ b/BookManager/Books.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="Books" Height="850" Width="800">
     <Grid>
+        <Button x:Name="Excel" Width="120" Height="20" Content="Отчет в Excel" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20,20,0,0" Click="Excel_Click"/>
         <Label VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,30,0,0">Добавьте книгу</Label>
         <TextBlock Text="Название" Margin="180,65,0,0" VerticalAlignment="Top" HorizontalAlignment="Left"/>
         <TextBlock Text="Категория" Margin="370,65,0,0" VerticalAlignment="Top" HorizontalAlignment="Left"/>
