--- a/BookManager/UserWindow.xaml
+++ b/BookManager/UserWindow.xaml
@@ -10,6 +10,7 @@
         <Label Content="Ассортимент" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,20,250,0"/>
         <Label Content="Заказ" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,20,100,0"/>
         <TextBox x:Name="Search" TextChanged="Search_TextChanged" Width="200" Height="30" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,70,450,0" />
+        <ComboBox x:Name="Sort" Width="100" Height="25" Margin="0,0,120,350" SelectionChanged="Sort_SelectionChanged"/>
         <ListBox x:Name="AllProducts" Width="400" MouseDoubleClick="AllProducts_MouseDoubleClick" Margin="100,50,0,0" VerticalAlignment="Center" HorizontalAlignment="Left" Height="350">
             <ListBox.ItemTemplate>
                 <DataTemplate>
